--- a/views/login.ejs
+++ b/views/login.ejs
@@ -876,7 +876,8 @@ document.getElementById('loginForm').addEventListener('submit', async function(e
                             full_name: name,
                             staff_id: staffId
                         },
-                        emailRedirectTo: window.location.origin + '/login'
+                              emailRedirectTo: 'https://done-dd2c.onrender.com/auth/confirm'  // ← CHANGE THIS
+    
                     }
                 });
 
